external-crates/move/crates/move-compiler/tests/move_2024/typing/invalid_variant_field_access.move
module 0x42::m {

    public enum M {
        T { x: u64 }
    }

    fun t(): u64 {
        let m = M::T { x: 6 };
        m.x
    }

}
